# platform-health

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyproject.toml:Zone.Identifier  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml
assets/: dragdrop.js  sortable.js  styles.css
sample_data/: bw_system_performance.csv  bw_system_performance.csv:Zone.Identifier  pipelines.csv  pipelines.csv:Zone.Identifier  tickets.csv  tickets.csv:Zone.Identifier
src/: __init__.py  app.py  components.py  data.py  utils.py
src/assets/: drag-drop.js  styles_v2.css
src/config/: __init__.py  settings.py
src/models/: __init__.py  performance.py  pipeline.py  platform.py  ticket.py
src/providers/: __init__.py  base.py  csv_provider.py  factory.py
tests/: __init__.py  test_components.py  test_data.py
